--- a/rapport.tex
+++ b/rapport.tex
@@ -16,7 +16,7 @@
 \usepackage{abstract}%
 
 \usepackage{amsmath}%
-\usepackage{subfig}%
+%\usepackage{subfig}%
 \usepackage{color}
 
 \usepackage{newpxtext, newpxmath}
@@ -57,7 +57,7 @@
 
 \renewcommand\qedsymbol{$\blacksquare$}%
 
-\newsubfloat{figure} % Subfigures
+%\newsubfloat{figure} % Subfigures
 
 
 % \usepackage{listings}%
